fix broken link in collapsed nav drawer

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,10 @@ body{
   padding: 0 10% 0 10%;
 }
 
+.custom-homepage-button{
+  margin-bottom: 10px;
+}
+
 /* Events styles */
 
 .banner{
